# xilens

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Dockerfile  FindXimea.cmake  LICENSE.md  Makefile  README.md  base.Dockerfile  caffe_interface.cpp  caffe_interface.h  camera_interface.cpp  camera_interface.h  cmake_uninstall.cmake  constants.h  default_defines.h  display.cpp  display.h  displayCaffe.cpp  displayCaffe.h  displayDemo.cpp  displayDemo.h  displayFunctional.cpp  displayFunctional.h  displayRaw.cpp  displayRaw.h  displaySaturation.cpp  displaySaturation.h  docker-compose.yaml  image_container.cpp  image_container.h  install_dependencies.sh  mainSusiCam.cpp  mainSusiRegress.cpp  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql.yml  greetings.yml  release-drafter.yml
LICENSES/: dependencies.md
debian/: changelog  control  rules
doc/source/: conf.py  developer_guidelines.rst  displays.rst  faq.rst  getting_started.rst  index.rst  mainwindow.rst  utils.rst
docs/: Doxyfile  b2nd_processing.md  developer_guidelines.md  faq.md  getting_started.md  index.md  supported_cameras.md
docs/source/: camera_components.rst  conf.py  constants.rst  developer_guidelines.rst  displays.rst  faq.rst  getting_started.rst  index.rst  mainwindow.rst  supported_cameras.rst  utils.rst
docs/stylesheets/: extra.css
examples/: Makefile  accessImageAfterClosingDevice.cpp  accessManifest.cpp  cameraSpeed.cpp  stdafx.h  update_camera_database.py
overrides/: main.html
resources/: XiLensCameraProperties.json  dark_amber.css  dark_amber.qss  resources.qrc  susicam.desktop  theme_resources.qrc  xilens.desktop
src/: CLI.cpp  camera.cpp  camera.h  cameraInterface.cpp  cameraInterface.h  camera_interface.cpp  camera_interface.h  constants.cpp  constants.h  display.cpp  display.h  displayFunctional.cpp  displayFunctional.h  displayRaw.cpp  displayRaw.h  imageContainer.cpp  imageContainer.h  image_container.cpp  logger.cpp  logger.h  mainSusiCam.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  util.cpp  util.h  version.cmake  widgets.cpp  widgets.h  xiAPIWrapper.h
tests/: bloscTest.cpp  cameraInterfaceTest.cpp  constantsTest.cpp  displayFunctionalTest.cpp  displayersTest.cpp  imageContainerTest.cpp  main.cpp  mainWindowTest.cpp  mocks.h  utilTest.cpp  util_test.cpp
